Feat: fix racing feature and implement result feature